--- a/Paper/ms.tex
+++ b/Paper/ms.tex
@@ -49,6 +49,11 @@
 \section{Introduction}
 
 
+Recently, \citet{2012MNRAS.427.2701F, 2013MNRAS.434L..16F} introduced an
+innovative approach to reverberation mapping where the results from multiple
+AGN can be combined to yield inferences about the entire sample of AGN,
+despite the fact that the constraints on any individual AGN are poor.
+
 
 
 \section{Combining Inferences About Multiple Objects}
@@ -75,7 +80,17 @@ p(\alpha)p(\btheta|\alpha)p(\bx | \btheta, \alpha)\\
 &=& p(\alpha)\prod_{i=1}^N f(\theta_i|\alpha)p(x_i | \theta_i)
 \end{eqnarray}
 
+\section{The Inference for a Single Object}
+The posterior distribution for the lag of a single object $i$ is obtained
+by fitting the following model.
 
+\begin{eqnarray}
+blah
+\end{eqnarray}
+
+Note that this is already not the cross-correlation.
+
+\section{Demonstration on Simulated Data}
 
 
 \section*{Acknowledgements}
@@ -84,7 +99,12 @@ p(\alpha)p(\btheta|\alpha)p(\bx | \btheta, \alpha)\\
 
 
 \begin{thebibliography}{99}
+\bibitem[\protect\citeauthoryear{Fine et al.}{2013}]{2013MNRAS.434L..16F} 
+Fine S., et al., 2013, MNRAS, 434, L16 
 
+
+\bibitem[\protect\citeauthoryear{Fine et al.}{2012}]{2012MNRAS.427.2701F} 
+Fine S., et al., 2012, MNRAS, 427, 2701 
 
 \end{thebibliography}
 
