--- a/Paper/ms.tex
+++ b/Paper/ms.tex
@@ -132,6 +132,8 @@ a continuous autoregressive process of order 1, or a CAR(1) model. These models
 have been studied extensively for AGN variability
 \citep[e.g.][]{2009ApJ...698..895K, 2011ApJ...735...80Z, 2013ApJ...765..106Z}.
 
+For the MCMC we used STAN \citep{nuts} and DNest \citep{dnest}.
+
 \section{Demonstration on Simulated Data}
 
 
@@ -144,6 +146,10 @@ have been studied extensively for AGN variability
 
 \bibitem[\protect\citeauthoryear{Bovy Jo, Hogg, 
 \& Roweis}{2011}]{extreme_deconvolution} Bovy Jo, Hogg D.~W., Roweis S.~T., 2011, AnApS, 5, 1657 
+
+\bibitem[\protect\citeauthoryear{Brewer, P{\'a}rtay,
+\& Cs{\'a}nyi}{2011}]{dnest} Brewer B.~J., P{\'a}rtay L.~B.,
+Cs{\'a}nyi G., 2011, Statistics and Computing, 21, 4, 649-656. arXiv:0912.2380
 
 \bibitem[\protect\citeauthoryear{Fine et al.}{2013}]{2013MNRAS.434L..16F} 
 Fine S., et al., 2013, MNRAS, 434, L16 
@@ -163,6 +169,9 @@ T.~J., 2004, AIP Conference Series, 735, 195
 
 \bibitem[\protect\citeauthoryear{Loredo}{2012}]{2012arXiv1208.3036L} Loredo 
 T.~J., 2012, arXiv, arXiv:1208.3036 
+
+\bibitem[\protect\citeauthoryear{Hoffman 
+\& Gelman}{2011}]{nuts} Hoffman M.~D., Gelman A., 2011, arXiv, arXiv:1111.4246 
 
 \bibitem[\protect\citeauthoryear{Zu et al.}{2013}]{2013ApJ...765..106Z} Zu 
 Y., Kochanek C.~S., Koz{\l}owski S., Udalski A., 2013, ApJ, 765, 106 
