--- a/Paper/ms.tex
+++ b/Paper/ms.tex
@@ -44,7 +44,12 @@ and subsequent response of the broad line region (BLR). The measurement of
 $\tau$ is typically used to estimate the physical size of the BLR and is
 combined with other measurements to estimate the black hole mass $M_{\rm BH}$.
 A major difficulty with RM campaigns is the large amount of data needed to
-measure $\tau$.
+measure $\tau$. Recently, several approaches have been suggested for reducing
+the cost of RM. One is to make less detailed measurements on a large sample
+of AGN, and then combine the results to infer something about the sample of
+AGN as a whole. In this letter we implement this method using a hierarchical
+Bayesian model and contrast this with the results from the previous stacked
+cross-correlation technique. We find ...
 \end{abstract}
 
 \begin{keywords}
