More self citations

--- a/Paper/ms.tex
+++ b/Paper/ms.tex
@@ -93,7 +93,7 @@ We implement this idea with a Bayesian hierarchical model
 \citep{2012arXiv1208.3036L}.
 These models are becoming increasingly common in astrophysics and have been
 used in a variety of different fields
-\citep[e.g.][]{extreme_deconvolution, loredo, kelly}.
+\citep[e.g.][]{extreme_deconvolution, loredo, kelly, 2013AJ....146....7B}.
 
 \section{Combining Inferences About Multiple Objects}
 Consider a sample of $N$ objects, each of which has parameters $\theta_i$.
@@ -194,6 +194,9 @@ Brewer B.~J., et al., 2011, ApJ, 733, L33
 \bibitem[\protect\citeauthoryear{Brewer, P{\'a}rtay,
 \& Cs{\'a}nyi}{2011}]{dnest} Brewer B.~J., P{\'a}rtay L.~B.,
 Cs{\'a}nyi G., 2011, Statistics and Computing, 21, 4, 649-656. arXiv:0912.2380
+
+\bibitem[\protect\citeauthoryear{Brewer, Foreman-Mackey, 
+\& Hogg}{2013}]{2013AJ....146....7B} Brewer B.~J., Foreman-Mackey D., Hogg D.~W., 2013, AJ, 146, 7 
 
 \bibitem[\protect\citeauthoryear{Fine et al.}{2013}]{2013MNRAS.434L..16F} 
 Fine S., et al., 2013, MNRAS, 434, L16 
