--- a/Paper/ms.tex
+++ b/Paper/ms.tex
@@ -179,7 +179,9 @@ cross-correlation techniques.
 
 
 \section*{Acknowledgements}
-
+It is a pleasure to thank Tommaso Treu, Anna Pancoast (UCSB), and
+Brandon Kelly (UCSB) for many
+useful conversations about reverberation mapping. The STAN team 
 
 
 
