--- a/Paper/ms.tex
+++ b/Paper/ms.tex
@@ -140,7 +140,7 @@ p(\alpha | \bx) &=&
 &\propto& p(\alpha)\int \prod_{i=1}^N f(\theta_i|\alpha)p(x_i | \theta_i) d^N\theta\\
 &\propto& p(\alpha) \prod_{i=1}^N \int f(\theta_i|\alpha)p(x_i | \theta_i) d\theta_i\\
 &\propto& p(\alpha) \prod_{i=1}^N \int \frac{f(\theta_i|\alpha)}{\pi(\theta)}p(x_i | \theta_i) \pi(\theta_i)d\theta_i\\
-&\propto& p(\alpha) \prod_{i=1}^N \mathds{E}\left[\frac{f(\theta_i|\alpha)}{\pi(\theta)}p(x_i | \theta_i)\right]
+&\propto& p(\alpha) \prod_{i=1}^N \mathds{E}\left[\frac{f(\theta_i|\alpha)}{\pi(\theta)}\right]
 \end{eqnarray}
 where the expectation is taken with respect to the individual object posterior
 of Equation~\ref{eq:individual}. This result enables us to reconstruct the
