Working ont he abstract

--- a/Paper/ms.tex
+++ b/Paper/ms.tex
@@ -59,22 +59,29 @@ cross-correlation technique. We find ...
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Introduction}
-Reverberation mapping (RM) is an important technique that has contributed a
-large amount to our knowledge of active galactic nuclei (AGN).
+Reverberation mapping (RM) is an important technique for the study
+of active galactic nuclei (AGN). The technique is based on the temporal
+fluctuations of the central continuum source, and the subsequent response
+of the broad line region (BLR) emission. The time delay between the continuum
+and the broad line fluctuations provides an estimate of the size of the BLR.
 
-Since its inception, there have been many improvements in the analysis of
-reverberation mapping data. These range from methods that attempt to infer the
-transfer function \citep{1995ApJ...440..166K, 2011ApJ...735...80Z},
+RM is a observationally intensive, requiring observations over a period of
+a few tens of days \citep{2013ApJ...769..128B}. As a result, many authors have
+studied the data analysis techniques involved in RM, and made substantial
+advances. These range from methods that attempt to infer the
+transfer function \citep[the distribution of lags in a single object,
+e.g.][]{1995ApJ...440..166K, 2011ApJ...735...80Z},
 the velocity-resolved transfer function
 \citep{2010ApJ...720L..46B}, or the physical structure of the BLR itself
 \citep{pancoast, arp151}.
 
-There are deeper issues at play in reverberation mapping, that we will ignore
-for the purposes of this letter. We list them here for completeness. Firstly,
-the mean lag $\tau$ is not equal to $c$ times the mean radius of the BLR
-distribution. Secondly, the mean lag $\tau$ is also not what the common
+There are many subtleties involved in reverberation mapping, that we will ignore
+for the purposes of this letter. We note them here for completeness. Firstly,
+the lag $\tau$ is not equal to $c$ times the mean radius of the BLR
+distribution. Secondly, the lag $\tau$ is also not what the common
 cross-correlation techniques measures, except in the case of very narrow
-transfer functions. Some of these difficulties have been addressed in other
+transfer functions (i.e. only a single lag in the system, rather than a wide
+distribution of lags). Some of these difficulties have been addressed in other
 contributions by \citet{pancoast} and \citet{arp151}.
 
 If the continuum light curve is described by a function $y(t)$, then the line
@@ -207,6 +214,9 @@ useful conversations about reverberation mapping. The STAN team
 
 
 \begin{thebibliography}{99}
+\bibitem[\protect\citeauthoryear{Barth et al.}{2013}]{2013ApJ...769..128B} 
+Barth A.~J., et al., 2013, ApJ, 769, 128 
+
 \bibitem[\protect\citeauthoryear{Bentz et al.}{2010}]{2010ApJ...720L..46B} 
 Bentz M.~C., et al., 2010, ApJ, 720, L46 
 
