--- a/Paper/ms.tex
+++ b/Paper/ms.tex
@@ -208,7 +208,7 @@ cross-correlation techniques.
 
 \begin{figure}
 \begin{center}
-\includegraphics{Figures/posterior.eps}
+\includegraphics[scale=0.5]{Figures/posterior.eps}
 \caption{\label{fig:posterior}}
 \end{center}
 \end{figure}
